# django_essentials

./: .gitignore  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
notes/noteapp/static/noteapp/: style.css
notes/noteapp/templates/noteapp/: detail.html
notes/noteapp/templatetags/: extract_tags.py
notes/notes/: settings.py  urls.py
notes/users/: forms.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
